--- a/RemeD/src/App.css
+++ b/RemeD/src/App.css
@@ -6,7 +6,7 @@
     text-align: center;
     padding-top: 20px;
     min-height: 100vh;
-    background-color: rgb(236, 236, 242);
+    background-color: rgb(88, 153, 214);
 }
 
 
@@ -20,7 +20,7 @@
 }
 .btn {
     display: inline-block;
-    background: #000;
+    /* background: #00b5d8; */
     color: #fff;
     border: none;
     padding: 10px 20px;
