--- a/RemeD/src/App.css
+++ b/RemeD/src/App.css
@@ -3,8 +3,8 @@
 .App{
   background-color: azure;
   background-attachment: fixed;
-  background-image: linear-gradient(rgba(76, 125, 216, 0.747), rgba(8, 223, 252, 0.918)),
-  url('https://www.shutterstock.com/image-photo/blurred-medical-background-modern-hospital-hall-1495426337') ;
+  /* background-image: linear-gradient(rgba(76, 125, 216, 0.747), rgba(8, 223, 252, 0.918)), */
+  /* url('https://www.shutterstock.com/image-photo/blurred-medical-background-modern-hospital-hall-1495426337') ; */
   background-size: 100%;
                
 
