--- a/RemeD/src/components/Notes/components/Notes.css
+++ b/RemeD/src/components/Notes/components/Notes.css
@@ -4,20 +4,28 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
+  
 }
 
 body {
   font-family: 'Poppins', sans-serif;
+ 
+}
+
+.lomo{
+  display: flex;
+  
 }
 
 .container {
-  max-width: 500px;
-  margin: 30px auto;
-  overflow: auto;
+  width: 900px;
+  height: 125vh;
   min-height: 300px;
-  border: 1px solid steelblue;
   padding: 30px;
   border-radius: 5px;
+  background-color: rgb(238, 238, 238);
+  margin: 0 auto;
 }
 
 .header {
@@ -25,6 +33,16 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+
+}
+
+.header h1 {
+  display: flex;
+  justify-content: center;
+  margin-left: 37.5%;
+  margin-bottom: 20px;
+  font-size: 30px;
+
 }
 
 .btn {
@@ -39,6 +57,7 @@ body {
   text-decoration: none;
   font-size: 15px;
   font-family: inherit;
+  
 }
 
 .btn:focus {
@@ -50,15 +69,18 @@ body {
 }
 
 .btn-block {
+  margin-left: 37.5%;
   display: block;
-  width: 100%;
+  width: 25%;
 }
 
+
 .task {
-  background: #f4f4f4;
+  background:white;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
+  
 }
 
 .task.reminder {
@@ -69,8 +91,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: white;
 }
 
+.task p {
+
+  background-color: rgb(255, 255, 255);
+}
 .add-form {
   margin-bottom: 40px;
 }
@@ -82,6 +109,9 @@ body {
 .form-control label {
   display: block;
 }
+svg{
+  background-color: #fff;
+}
 
 .form-control input {
   width: 100%;
@@ -89,6 +119,17 @@ body {
   margin: 5px;
   padding: 3px 7px;
   font-size: 17px;
+  border: 1px solid  rgb(169, 165, 165);
+  background-color: white;
+}
+
+.form-control textarea {
+  width: 100%;
+  height: 350px;
+
+  font-size: 17px;
+  border: 1px solid  rgb(169, 165, 165);
+  background-color: white;
 }
 
 .form-control-check {
