--- a/RemeD/src/App.css
+++ b/RemeD/src/App.css
@@ -66,16 +66,19 @@
 
   
 #footer {
+    height: 15vh;
     margin-left: 5px;
     text-align: center;
     padding: 1em 0 1em 0;
     box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
     font-size: 0.8em;
+
 }
 
     #footer .copyright {
         cursor: default;
         margin: 0;
+        padding-top: 25px;
     }
 
         #footer .copyright li {
