--- a/RemeD/src/App.css
+++ b/RemeD/src/App.css
@@ -10,7 +10,7 @@
 }
 
 .landBox{
-  background-image: linear-gradient(#168aad #a9d6e5), 
+  background-image: linear-gradient(rgba(76, 125, 216, 0.747), rgba(8,223,252,0.918)), 
   url('https://www.shutterstock.com/image-photo/blurred-medical-background-modern-hospital-hall-1495426337') ;
 
 }
