--- a/RemeD/src/App.css
+++ b/RemeD/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
 .App{
-  /* background-color: azure; */
+  background-color: #f1faee;
   
   background-attachment: fixed;
   background-size: 100%;
